--- a/Mortgage repayment calculator App/index.html
+++ b/Mortgage repayment calculator App/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
+  
 
     <link
       rel="icon"
@@ -14,7 +14,7 @@
 
     <title> Mortgage repayment calculator</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -124,6 +124,6 @@
         </div>
       </section>
     </main>
-    <script src="app.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
